--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,15 @@
-# deps
-/node_modules
-
-# generated content
-.map.ts
-.contentlayer
-
-# test & build
-/coverage
-/.next/
-/out/
-/build
-*.tsbuildinfo
-
-# misc
+# OS generated files
 .DS_Store
-*.pem
-/.pnp
-.pnp.js
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+thumbs.db
+Thumbs.db
+desktop.ini
 
-# others
-.env*.local
-.vercel
-next-env.d.ts
-*storybook.log
+# PowerShell
+*.psess
+*.vspx
+*.psprojs
+*.log
