--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
-  "editor.rulers": [80, 100],
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": true,
   "editor.stickyScroll.enabled": true,
@@ -47,12 +46,7 @@
   },
 
   "cSpell.enabled": true,
-  "cSpell.words": [
-    "dotfiles",
-    "powershell",
-    "shellscript",
-    "vscode"
-  ],
+  "cSpell.words": ["dotfiles", "powershell", "shellscript", "vscode"],
 
   "search.exclude": {
     "**/.git": true,
