chore(vscode): updated settings up-to date

--- a/settings.json
+++ b/settings.json
@@ -42,10 +42,20 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "breadcrumbs.enabled": true,
+  "breadcrumbs.symbolPath": "last",
+  "breadcrumbs.symbolSortOrder": "position",
   "chat.editor.fontFamily": "CommitMono Nerd Font, JetBrains Mono",
   "debug.console.fontFamily": "CommitMono Nerd Font, JetBrains Mono",
+  "debug.console.fontSize": 13,
+  "debug.inlineValues": "on",
+  "debug.internalConsoleOptions": "openOnSessionStart",
+  "debug.openDebug": "openOnDebugBreak",
+  "debug.showBreakpointsInOverviewRuler": true,
+  "debug.toolBarLocation": "docked",
   "diffEditor.ignoreTrimWhitespace": true,
+  "editor.acceptSuggestionOnCommitCharacter": true,
   "editor.bracketPairColorization.enabled": true,
+  "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit"
   },
@@ -53,7 +63,7 @@
   "editor.cursorBlinking": "solid",
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.cursorSurroundingLines": 8,
-  "editor.defaultFormatter": "biomejs.biome",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.definitionLinkOpensInPeek": true,
   "editor.folding": false,
   "editor.fontFamily": "CommitMono Nerd Font, JetBrains Mono",
@@ -76,6 +86,8 @@
   "editor.minimap.enabled": false,
   "editor.occurrencesHighlight": "off",
   "editor.overviewRulerBorder": false,
+  "editor.parameterHints.cycle": false,
+  "editor.quickSuggestionsDelay": 10,
   "editor.renderLineHighlight": "none",
   "editor.roundedSelection": false,
   "editor.scrollbar.horizontal": "hidden",
@@ -85,10 +97,12 @@
   "editor.smoothScrolling": true,
   "editor.stickyScroll.enabled": true,
   "editor.suggest.insertMode": "replace",
+  "editor.suggest.preview": true,
   "editor.suggestFontSize": 14,
-  "editor.tabSize": 2,
+  "editor.suggestOnTriggerCharacters": true,
+  "editor.tabSize": 4,
   "editor.wordWrap": "on",
-  "errorLens.enabledDiagnosticLevels": ["error", "warning"],
+  "errorLens.enabledDiagnosticLevels": ["error", "warning", "info"],
   "errorLens.excludePatterns": [
     "[\"node_modules\", \"**/node_modules\"]",
     "\"node_modules\"",
@@ -97,11 +111,14 @@
     "**/node_modules"
   ],
   "errorLens.fontStyleItalic": true,
+  "errorLens.margin": "20px",
   "errorLens.messageTemplate": "$message - $source",
   "errorLens.severityText": ["ERROR", "WARNING", "HINT", "ERROR"],
+  "errorLens.statusBarColorsEnabled": true,
   "explorer.compactFolders": true,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "explorer.excludeGitIgnore": true,
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
@@ -197,6 +214,19 @@
   "extensions.autoUpdate": false,
   "extensions.ignoreRecommendations": false,
   "files.autoSave": "afterDelay",
+  "files.exclude": {
+    "**/.DS_Store": true,
+    "**/.git": true,
+    "**/.hg": true,
+    "**/.next": true,
+    "**/.svn": true,
+    "**/.turbo": true,
+    "**/CVS": true,
+    "**/Thumbs.db": true,
+    "**/build": true,
+    "**/dist": true,
+    "**/node_modules": true
+  },
   "files.insertFinalNewline": true,
   "git.autofetch": true,
   "git.confirmSync": false,
@@ -217,6 +247,19 @@
   "projectManager.git.baseFolders": ["$home/workspace"],
   "projectManager.sortList": "Recent",
   "scm.inputFontFamily": "CommitMono Nerd Font, JetBrains Mono",
+  "search.exclude": {
+    "**/.cache": true,
+    "**/.git": true,
+    "**/.github": true,
+    "**/.next": true,
+    "**/.turbo": true,
+    "**/bower_components": true,
+    "**/coverage": true,
+    "**/dist": true,
+    "**/node_modules": true,
+    "**/package-lock.json": true,
+    "**/yarn.lock": true
+  },
   "security.workspace.trust.untrustedFiles": "open",
   "sortJSON.orderOverride": [
     "name",
@@ -241,10 +284,14 @@
     "cSpell.userWords"
   ],
   "supermaven.allowGitignore": true,
+  "telemetry.telemetryLevel": "off",
   "terminal.integrated.defaultProfile.windows": "Alacritty",
   "terminal.integrated.enableMultiLinePasteWarning": "auto",
   "terminal.integrated.env.osx": {
     "FIG_NEW_SESSION": "1"
+  },
+  "terminal.integrated.env.windows": {
+    "TERM": "xterm-256color"
   },
   "terminal.integrated.fontFamily": "CommitMono Nerd Font, JetBrains Mono",
   "terminal.integrated.gpuAcceleration": "on",
@@ -263,6 +310,7 @@
     "pwshCode": true,
     "pwshGit": true
   },
+  "terminal.integrated.tabs.enabled": true,
   "typescript.format.enable": false,
   "typescript.preferences.importModuleSpecifier": "relative",
   "typescript.updateImportsOnFileMove.enabled": "always",
@@ -274,7 +322,6 @@
   "window.menuBarVisibility": "compact",
   "window.title": "",
   "window.zoomLevel": 1,
-  "workbench.activityBar.location": "hidden",
   "workbench.colorTheme": "Moegi Space",
   "workbench.editor.closeEmptyGroups": true,
   "workbench.editor.enablePreview": false,
@@ -284,18 +331,24 @@
   "workbench.editorAssociations": {
     "{git,gitlens}:/**/*.{md,csv,svg}": "default"
   },
-  "workbench.iconTheme": "vscode-seedling-icon-theme-plus",
+  "workbench.enableExperiments": false,
+  "workbench.iconTheme": "ayu",
   "workbench.layoutControl.enabled": false,
   "workbench.list.smoothScrolling": true,
-  "workbench.preferredDarkColorTheme": "Moegi Dark",
+  "workbench.preferredDarkColorTheme": "Moegi Black Zen",
   "workbench.preferredLightColorTheme": "Moegi Light",
+  "workbench.reduceMotion": "on",
+  "workbench.settings.enableNaturalLanguageSearch": false,
   "workbench.sideBar.location": "right",
   "workbench.startupEditor": "none",
+  "workbench.tree.indent": 12,
+  "workbench.tree.renderIndentGuides": "always",
   "zenMode.centerLayout": false,
   "zenMode.fullScreen": false,
   "zenMode.hideActivityBar": true,
   "zenMode.hideLineNumbers": false,
   "zenMode.hideStatusBar": true,
+  "zenMode.restore": true,
   "zenMode.showTabs": "single",
   "zenMode.silentNotifications": true
 }
